# czujka-librus

./: .env.example  .gitignore  Cargo.toml  README.md  RUNNING.md  docker-compose.yml  flake.nix  index.js  librus-notifications.service  librus-notifications.timer  librus-test.js  module.nix  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
rust/: db.rs  email.rs  logger.rs  main.rs  models.rs  openai.rs  text_utils.rs
src/: database.js  email-service.js  logger.js  openai-service.js
