[package]
name = "librus-notifications"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "librus-notifications"
path = "rust/main.rs"

[dependencies]
anyhow = "1"
librus-rs = { git = "https://github.com/FlakM/librus-rs", rev = "c2d8440" }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls", "smtp-transport", "builder", "hostname", "rustls-native-certs", "aws-lc-rs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
regex = "1"
once_cell = "1"
